--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-	"name": "lundegaard-tech-stack-fp-js",
+	"name": "lundegaard-tech-stack-fpjs",
 	"version": "1.0.0",
 	"main": "index.js",
-	"repository": "https://github.com/tommmyy/lundegaard-tech-stack-fp-js.git",
+	"repository": "https://github.com/tommmyy/lundegaard-tech-stack-fpjs.git",
 	"author": "Tomáš Konrády <tomaskonrady@gmail.com>",
 	"license": "MIT",
 	"devDependencies": {
+		"@babel/cli": "^7.0.0",
+		"@babel/core": "^7.0.0",
+		"@babel/preset-env": "^7.0.0",
+		"babel-loader": "^8.0.4",
 		"clean-webpack-plugin": "^0.1.19",
 		"eslint": "^5.6.0",
 		"html-webpack-plugin": "^3.2.0",
