--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,6 @@
 {
     "extends": "eslint:recommended",
+    "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 6,
         "sourceType": "module"
@@ -9,6 +10,7 @@
         "node": true
     },
     "rules": {
+        "no-console": "off",
         "indent": ["error", "tab"],
         "no-tabs": 0,
         "quote-props": ["error", "as-needed"],
