--- a/package.json
+++ b/package.json
@@ -6,19 +6,18 @@
 	"author": "Tomáš Konrády <tomaskonrady@gmail.com>",
 	"license": "MIT",
 	"devDependencies": {
-		"@babel/cli": "^7.0.0",
+		"@babel/cli": "^7.1.2",
 		"@babel/core": "^7.0.0",
+		"@babel/node": "^7.0.0",
 		"@babel/preset-env": "^7.0.0",
-		"babel-loader": "^8.0.4",
-		"clean-webpack-plugin": "^0.1.19",
+		"babel-eslint": "^10.0.1",
 		"eslint": "^5.6.0",
-		"html-webpack-plugin": "^3.2.0",
-		"prettier": "^1.14.3",
-		"webpack": "^4.20.2",
-		"webpack-cli": "^3.1.2"
+		"nodemon": "^1.18.4",
+		"prettier": "^1.14.3"
 	},
 	"scripts": {
-		"build": "webpack --mode production",
-		"build:dev": "webpack --mode development"
+		"task": "nodemon --exec babel-node",
+		"task-01": "yarn task src/task-01.js",
+		"task-02": "yarn task src/task-02.js"
 	}
 }
