--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
 	},
 	"scripts": {
 		"task": "nodemon --exec babel-node"
+	},
+	"dependencies": {
+		"ramda": "^0.25.0",
+		"ramda-extension": "^0.6.1"
 	}
 }
